# predpray

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
agents/: agent.py  agent_properties.py  evolution.py  grass.py  network.py  observation.py  predator.py  prey.py
agents/properties/: agent_properties.py  predator_properties.py  prey_properties.py
agents/strategies/: __init__.py  base_strategy.py  grass_strategy.py  predator_strategy.py  prey_strategy.py
ui/: color_manager.py  grid_visualization.py  simulation.py  statistics.py  stats_renderer.py  visualization.py
ui/renderers/: base_renderer.py  grass_renderer.py  predator_renderer.py  prey_renderer.py
world/: config.py  environment.py  grid.py  population_manager.py
