[project]
name = "predpray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pygame>=2.6.1",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.5",
]
